--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </div>
 
 <script>
-  const urlJson = 'https://tu-servidor.com/programacion-radio.json'; // reemplaza por tu URL real
+  const urlJson = '/horarios.json'; // reemplaza por tu URL real
 
   function getCurrentTimeGmtMinus5() {
     const now = new Date();
