--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </div>
 
 <script>
-  const urlJson = '/horarios.json'; // reemplaza por tu URL real
+  const urlJson = 'https://raw.githubusercontent.com/carjocosa/ProgramacionRadioPoder/6e3f90771f755e996826dc3faf56a4b971581441/horarios.json'; // reemplaza por tu URL real
 
   function getCurrentTimeGmtMinus5() {
     const now = new Date();
