--- a/index.html
+++ b/index.html
@@ -4,148 +4,151 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Programa Actual - Radio Poder</title>
-<link href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@300;400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@300;400;600&display=swap" rel="stylesheet" />
 <style>
   body {
-    font-family: 'Saira Condensed', sans-serif;
-    padding: 10px;
     margin: 0;
     background: transparent;
+    font-family: 'Saira Condensed', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
   }
-  .contenedor {
-    background: rgba(38,38,38,0.8);
-    border-radius: 8px;
-    padding: 20px 30px;
-    text-align: center;
+  #programa-wrapper {
+    width: 100%;
+    max-width: 750px;
+    background: transparent;
+    display: flex;
+    align-items: baseline;
+    font-size: 1.3em;
+    gap: 10px;
     color: #a2c614;
-    box-shadow: 0 0 15px rgba(0,0,0,0.4);
+    white-space: nowrap;
   }
-  .titulo {
-    font-size: 2rem;
-    font-weight: 600;
-    margin-bottom: 10px;
+  .texto-antes {
+    font-weight: 500;
+    color: #a2c614;
+  }
+  .nombre-programa {
+    font-size: 1.6em;
+    font-weight: 700;
+    color: #a2c614;
   }
   .horario {
-    font-size: 1.2rem;
-    color: #d1d1d1;
-    margin-bottom: 8px;
-  }
-  .estado {
-    color: #a2c614;
-    font-size: 1rem;
+    font-size: 1.2em;
     font-weight: 400;
+    color: #fff;
+    margin-left: 10px;
   }
 </style>
 </head>
 <body>
-<div class="contenedor" id="programaActual">
-  Cargando programa...
+<div id="programa-wrapper">
+  <span class="texto-antes">Ahora escuchas:</span>
+  <span class="nombre-programa" id="nombrePrograma">Cargando...</span>
+  <span class="horario" id="horarioPrograma"></span>
 </div>
 
 <script>
-  // JSON embebido corregido con comas entre objetos
-  const programacion = {
-    "lunes": [
-      {"programa": "Música Libre", "inicio": "00:00", "fin": "06:00"},
-      {"programa": "A Primera Hora", "inicio": "06:00", "fin": "08:30"},
-      {"programa": "Todo Cambia", "inicio": "08:30", "fin": "11:30"},
-      {"programa": "El Sol Ya Estaba Ahí", "inicio": "11:30", "fin": "15:00"},
-      {"programa": "Tardes de Poder", "inicio": "15:00", "fin": "18:00"},
-      {"programa": "Música Libre", "inicio": "18:00", "fin": "23:59"}
-    ],
-    "martes": [
-      {"programa": "Música Libre", "inicio": "00:00", "fin": "06:00"},
-      {"programa": "A Primera Hora", "inicio": "06:00", "fin": "08:30"},
-      {"programa": "Todo Cambia", "inicio": "08:30", "fin": "11:30"},
-      {"programa": "El Sol Ya Estaba Ahí", "inicio": "11:30", "fin": "15:00"},
-      {"programa": "Tardes de Poder", "inicio": "15:00", "fin": "18:00"},
-      {"programa": "Música Libre", "inicio": "18:00", "fin": "23:59"}
-    ],
-    "miercoles": [
-      {"programa": "Música Libre", "inicio": "00:00", "fin": "06:00"},
-      {"programa": "A Primera Hora", "inicio": "06:00", "fin": "08:30"},
-      {"programa": "Todo Cambia", "inicio": "08:30", "fin": "11:30"},
-      {"programa": "El Sol Ya Estaba Ahí", "inicio": "11:30", "fin": "15:00"},
-      {"programa": "Tardes de Poder", "inicio": "15:00", "fin": "18:00"},
-      {"programa": "Música Libre", "inicio": "18:00", "fin": "23:59"}
-    ],
-    "jueves": [
-      {"programa": "Música Libre", "inicio": "00:00", "fin": "06:00"},
-      {"programa": "A Primera Hora", "inicio": "06:00", "fin": "08:30"},
-      {"programa": "Todo Cambia", "inicio": "08:30", "fin": "11:30"},
-      {"programa": "El Sol Ya Estaba Ahí", "inicio": "11:30", "fin": "15:00"},
-      {"programa": "Tardes de Poder", "inicio": "15:00", "fin": "18:00"},
-      {"programa": "Música Libre", "inicio": "18:00", "fin": "23:59"}
-    ],
-    "viernes": [
-      {"programa": "Música Libre", "inicio": "00:00", "fin": "06:00"},
-      {"programa": "A Primera Hora", "inicio": "06:00", "fin": "08:30"},
-      {"programa": "Todo Cambia", "inicio": "08:30", "fin": "11:30"},
-      {"programa": "El Sol Ya Estaba Ahí", "inicio": "11:30", "fin": "15:00"},
-      {"programa": "Tardes de Poder", "inicio": "15:00", "fin": "18:00"},
-      {"programa": "Música Libre", "inicio": "18:00", "fin": "23:59"}
-    ],
-    "sabado": [
-      {"programa": "Música Libre", "inicio": "00:00", "fin": "11:00"},
-      {"programa": "11 & 11", "inicio": "11:00", "fin": "13:00"},
-      {"programa": "Música Libre", "inicio": "13:00", "fin": "15:00"},
-      {"programa": "Golpes de la Semana", "inicio": "15:00", "fin": "17:00"},
-      {"programa": "Música Libre", "inicio": "17:00", "fin": "23:59"}
-    ],
-    "domingo": [
-      {"programa": "Música Libre", "inicio": "00:00", "fin": "11:00"},
-      {"programa": "Golpes de la Semana", "inicio": "11:00", "fin": "13:00"},
-      {"programa": "Música Libre", "inicio": "13:00", "fin": "18:00"},
-      {"programa": "Radio Reggae", "inicio": "18:00", "fin": "20:00"},
-      {"programa": "Música Libre", "inicio": "20:00", "fin": "23:59"}
-    ]
-  };
+const programacion = {
+  "lunes": [
+    {"programa": "Música Libre", "inicio": "00:00", "fin": "06:00"},
+    {"programa": "A Primera Hora", "inicio": "06:00", "fin": "08:30"},
+    {"programa": "Todo Cambia", "inicio": "08:30", "fin": "11:30"},
+    {"programa": "El Sol Ya Estaba Ahí", "inicio": "11:30", "fin": "15:00"},
+    {"programa": "Tardes de Poder", "inicio": "15:00", "fin": "18:00"},
+    {"programa": "Música Libre", "inicio": "18:00", "fin": "23:59"}
+  ],
+  "martes": [
+    {"programa": "Música Libre", "inicio": "00:00", "fin": "06:00"},
+    {"programa": "A Primera Hora", "inicio": "06:00", "fin": "08:30"},
+    {"programa": "Todo Cambia", "inicio": "08:30", "fin": "11:30"},
+    {"programa": "El Sol Ya Estaba Ahí", "inicio": "11:31", "fin": "15:00"},
+    {"programa": "Tardes de Poder", "inicio": "15:00", "fin": "18:00"},
+    {"programa": "Música Libre", "inicio": "18:00", "fin": "23:59"}
+  ],
+  "miercoles": [
+    {"programa": "Música Libre", "inicio": "00:00", "fin": "06:00"},
+    {"programa": "A Primera Hora", "inicio": "06:00", "fin": "08:30"},
+    {"programa": "Todo Cambia", "inicio": "08:30", "fin": "11:30"},
+    {"programa": "El Sol Ya Estaba Ahí", "inicio": "11:30", "fin": "15:00"},
+    {"programa": "Tardes de Poder", "inicio": "15:00", "fin": "18:00"},
+    {"programa": "Música Libre", "inicio": "18:00", "fin": "23:59"}
+  ],
+  "jueves": [
+    {"programa": "Música Libre", "inicio": "00:00", "fin": "06:00"},
+    {"programa": "A Primera Hora", "inicio": "06:00", "fin": "08:30"},
+    {"programa": "Todo Cambia", "inicio": "08:30", "fin": "11:30"},
+    {"programa": "El Sol Ya Estaba Ahí", "inicio": "11:30", "fin": "15:00"},
+    {"programa": "Tardes de Poder", "inicio": "15:00", "fin": "18:00"},
+    {"programa": "Música Libre", "inicio": "18:00", "fin": "23:59"}
+  ],
+  "viernes": [
+    {"programa": "Música Libre", "inicio": "00:00", "fin": "06:00"},
+    {"programa": "A Primera Hora", "inicio": "06:00", "fin": "08:30"},
+    {"programa": "Todo Cambia", "inicio": "08:30", "fin": "11:30"},
+    {"programa": "El Sol Ya Estaba Ahí", "inicio": "11:30", "fin": "15:00"},
+    {"programa": "Tardes de Poder", "inicio": "15:00", "fin": "18:00"},
+    {"programa": "Música Libre", "inicio": "18:00", "fin": "23:59"}
+  ],
+  "sabado": [
+    {"programa": "Música Libre", "inicio": "00:00", "fin": "11:00"},
+    {"programa": "11 & 11", "inicio": "11:00", "fin": "13:00"},
+    {"programa": "Música Libre", "inicio": "13:00", "fin": "15:00"},
+    {"programa": "Golpes de la Semana", "inicio": "15:00", "fin": "17:00"},
+    {"programa": "Música Libre", "inicio": "17:00", "fin": "23:59"}
+  ],
+  "domingo": [
+    {"programa": "Música Libre", "inicio": "00:00", "fin": "11:00"},
+    {"programa": "Golpes de la Semana", "inicio": "11:00", "fin": "13:00"},
+    {"programa": "Música Libre", "inicio": "13:00", "fin": "18:00"},
+    {"programa": "Radio Reggae", "inicio": "18:00", "fin": "20:00"},
+    {"programa": "Música Libre", "inicio": "20:00", "fin": "23:59"}
+  ]
+};
 
-  function getCurrentTimeGmtMinus5() {
-    const now = new Date();
-    const utc = now.getTime() + now.getTimezoneOffset() * 60000;
-    return new Date(utc - 5 * 3600000);
-  }
+function getHoraGMTMinus5() {
+  const ahora = new Date();
+  const utc = ahora.getTime() + ahora.getTimezoneOffset() * 60000;
+  return new Date(utc - 5 * 3600000);
+}
 
-  function formatTime(date) {
-    return date.toTimeString().slice(0, 5);
-  }
+function formateaHora(fecha) {
+  return fecha.toTimeString().slice(0,5);
+}
 
-  function encuentraProgramaActual(programasDelDia, horaActualStr) {
-    for (const programa of programasDelDia) {
-      if (horaActualStr >= programa.inicio && horaActualStr < programa.fin) {
-        return programa;
-      }
-    }
-    return null;
-  }
-
-  function actualizarPrograma() {
-    const diasSemana = ['domingo', 'lunes', 'martes', 'miercoles', 'jueves', 'viernes', 'sabado'];
-    const fechaActual = getCurrentTimeGmtMinus5();
-    const diaSemanaStr = diasSemana[fechaActual.getDay()];
-    const horaActualStr = formatTime(fechaActual);
-    const programasDelDia = programacion[diaSemanaStr];
-    const programaActual = encuentraProgramaActual(programasDelDia, horaActualStr);
-
-    const contenedor = document.getElementById('programaActual');
-    if (programaActual) {
-      contenedor.innerHTML = `
-        <div class="titulo">${programaActual.programa}</div>
-        <div class="horario">${programaActual.inicio} - ${programaActual.fin}</div>
-        <div class="estado">Ahora en emisión</div>
-      `;
-    } else {
-      contenedor.innerHTML = '<div class="titulo">Fuera de programación</div><div class="estado">Sin programa activo</div>';
+function encontrarProgramaActual(programasDelDia, horaActualStr) {
+  for (const programa of programasDelDia) {
+    if (horaActualStr >= programa.inicio && horaActualStr < programa.fin) {
+      return programa;
     }
   }
+  return null;
+}
 
-  actualizarPrograma();
-  setInterval(actualizarPrograma, 60000);
+function actualizarPrograma() {
+  const diasSemana = ['domingo','lunes','martes','miercoles','jueves','viernes','sabado'];
+  const fechaActual = getHoraGMTMinus5();
+  const diaSemanaStr = diasSemana[fechaActual.getDay()];
+  const horaActualStr = formateaHora(fechaActual);
+  const programasDelDia = programacion[diaSemanaStr];
+  const programaActual = encontrarProgramaActual(programasDelDia, horaActualStr);
+
+  const nombre = document.getElementById('nombrePrograma');
+  const horario = document.getElementById('horarioPrograma');
+
+  if (programaActual) {
+    nombre.textContent = programaActual.programa;
+    horario.textContent = `(${programaActual.inicio} - ${programaActual.fin})`;
+  } else {
+    nombre.textContent = 'Fuera de programación';
+    horario.textContent = '';
+  }
+}
+
+actualizarPrograma();
+setInterval(actualizarPrograma, 60000);
 </script>
 </body>
 </html>
